// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL eBjmLM"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL bJSggk"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL eCqoUH"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy bzVAry sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL eWQPeQ"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd fbiImu sc-hHEiqL eCqoUH"
    >
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd naqFC"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd efSKPX"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKAaRy iZvmHx sc-iCoGMd cgxsCq"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
